Templates: added csrf.js to base.html and sentry.html

--- a/syllabus/templates/base.html
+++ b/syllabus/templates/base.html
@@ -15,6 +15,7 @@
         {% compress js %}
 	    <script src="/static/scripts/jquery.js"></script>
 	    <script src="/static/scripts/jquery-ui.js"></script>
+            <script src="/static/scripts/csrf.js"></script>
 	    <script src="/static/scripts/syll.js"></script>
 	    <script type="text/javascript" src="/static/scripts/overlay.js"></script>
 	    <script type="text/javascript" src="/static/scripts/multi.js"></script>
