--- a/syllabus/templates/sentry.html
+++ b/syllabus/templates/sentry.html
@@ -3,6 +3,7 @@
         <link type="text/scss" rel="stylesheet" href="/static/styles/sentry.scss"></link>
   {% endcompress %}
         <script src="/resources/scripts/jquery.js"></script>
+        <script src="/resources/scripts/csrf.js"></script>
 	<script src="/resources/scripts/sentry.js"></script>
 </head>
 <body>
